# mitsui_pred_challenge

./: .gitignore  pyproject.toml
data/misc/: file_desc.md
notebooks/: EDA_First_look.ipynb  prediction_logic.xlsx
src/mitsui_pred_challenge/kaggle_evaluation/: mitsui_gateway.py  mitsui_inference_server.py
src/mitsui_pred_challenge/kaggle_evaluation/core/: base_gateway.py  relay.py  templates.py
src/mitsui_pred_challenge/utility/: evaluation_api.py  general_api.py
